trying to fix footer to bottom on iphone

--- a/main.css
+++ b/main.css
@@ -160,6 +160,7 @@ footer {
   justify-content: center;
   align-items: center;
   height: 100%;
+  background: lightcyan;
 }
 
 .social-icons {
